--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,10 @@ flask-bcrypt==0.7.1
 Flask==1.1.2
 gunicorn==20.0.4
 pg8000==1.13.2
+dash==1.2.0
+dash-core-components==1.1.2
+dash-dangerously-set-inner-html==0.0.*
+dash-html-components==1.0.1
+dash-renderer==1.0.1
+dash-table==4.2.0
+
