--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,6 @@ dash-html-components==1.0.1
 dash-renderer==1.0.1
 dash-table==4.2.0
 
+flask-login==0.5.0
+Flask-SQLAlchemy==2.4.0
+Flask-Migrate==2.5.2
