--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
         environment:
           POSTGRES_USER: postgres_user
           POSTGRES_PASSWORD: postgres_password
+        container_name: etl-compose-database
         expose:
           - "5432"
         image: postgres:11.5
