add flask admin

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,4 @@ ETL_SUBSCRIPTION_NAME=PubSub push subscription (With target set to this url)
 ETL_SUBSCRIPTION_TOPIC=PubSub topic
 GOOGLE_APPLICATION_CREDENTIALS=See README.md
 DB_CONN=see Readme.md - whitelist IP address and then set this to something like postgres://postgres:***@db.ip.address.123/postgres
+SECRET_KEY=
