--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 zipp==3.1.0
 pygsheets==2.0.1
-pandas==0.24.2
+pandas==1.*
 psycopg2-binary==2.8.5
 sqlalchemy==1.3.18
 google-api-core==1.22.1
@@ -20,9 +20,10 @@ dash-dangerously-set-inner-html==0.0.*
 dash-html-components==1.0.1
 dash-renderer==1.0.1
 dash-table==4.2.0
-
 flask-login==0.5.0
 Flask-SQLAlchemy==2.4.0
 Flask-Migrate==2.5.2
 flask-talisman==0.7.0
 flask-admin==1.5.7
+celery==5.0.4
+redis==3.5.3
