removing unused options

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,6 @@
-DB_CONN=see Readme.md - whitelist IP address and then set this to something like postgres://postgres:***@db.ip.address.123/postgres
-ETL_SUBSCRIPTION_NAME=PubSub push subscription (With target set to this url)
-ETL_SUBSCRIPTION_TOPIC=PubSub topic
 FLASK_DEBUG=1
 GOOGLE_APPLICATION_CREDENTIALS=See README.md
 REDIS_URL=redis://redis
-SECRET_KEY=
+SECRET_KEY=asecret
 
 
