--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,5 @@ redis==3.5.3
 flask-wtf==0.14.3
 pytest==6.2.1
 -e git+https://github.com/jkedmiston/latex-ds.git@master#egg=latex-ds
+seaborn==0.11.0
+matplotlib==3.3.3
