--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,6 @@ celery==5.0.4
 redis==3.5.3
 flask-wtf==0.14.3
 pytest==6.2.1
+-e git+https://github.com/jkedmiston/latex-ds.git@master#egg=latex-ds
+seaborn==0.11.0
+matplotlib==3.3.3
