[29-google-slides-output-poc] set up poc for slides show
- add additional links to sidebar
- reconfigure env.sample
- adds google storage functionality

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
             - PORT=5000
             - SECRET_KEY
             - FLASK_DEBUG=1
+            - STORAGE_BUCKET
             - REDIS_URL
         stdin_open: true
         tty: true
