--- a/.env.sample
+++ b/.env.sample
@@ -2,5 +2,6 @@ FLASK_DEBUG=1
 GOOGLE_APPLICATION_CREDENTIALS=See README.md
 REDIS_URL=redis://redis
 SECRET_KEY=asecret
-
+TEST_EMAIL=Use your personal gmail address, but this isn't required. 
+STORAGE_BUCKET=Set up a GCP bucket which the service account can write to. 
 
