--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,4 @@ seaborn==0.11.0
 matplotlib==3.3.3
 sqlalchemy_utils
 scikit-learn==0.23.2
+-e git+https://github.com/jkedmiston/latex-ds.git@master#egg=latex-ds
