integrates realsense capture with pubsub
- refines build command for resetting the usb connections each time a photo is requested
- writes out a cv2 colormap image from the camera
- presents signed url from storage filename to html

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,9 @@ services:
             - STORAGE_BUCKET
             - REDIS_URL
             - DIABETES_DATA_URL
+            - SERVER_TO_DEPTH_CAM_TOPIC
+            - DEPTH_CAM_TO_SERVER_SUBSCRIPTION
+            
         stdin_open: true
         tty: true
         ports:
@@ -46,6 +49,8 @@ services:
             - SECRET_KEY
             - REDIS_URL
             - STORAGE_BUCKET            
+            - SERVER_TO_DEPTH_CAM_TOPIC
+            - DEPTH_CAM_TO_SERVER_SUBSCRIPTION
 
     beat:
         image: etl
