--- a/.env.sample
+++ b/.env.sample
@@ -4,4 +4,8 @@ REDIS_URL=redis://redis
 SECRET_KEY=asecret
 TEST_EMAIL=Use your personal gmail address, but this isn't required. 
 STORAGE_BUCKET=Set up a GCP bucket which the service account can write to. 
+SERVER_TO_DEPTH_CAM_TOPIC=setup GCP
+SERVER_TO_DEPTH_CAM_SUBSCRIPTION=setup GCP
+DEPTH_CAM_TO_SERVER_TOPIC=setup GCP
+DEPTH_CAM_TO_SERVER_SUBSCRIPTION=setup GCP
 
