--- a/google_functions/deployment/mpi_cloud_function/requirements.txt
+++ b/google_functions/deployment/mpi_cloud_function/requirements.txt
@@ -9,4 +9,4 @@ google-cloud-core==1.5.0
 google-resumable-media==0.4.1
 googleapis-common-protos==1.52.0
 grpc-google-iam-v1==0.12.3
-numpy
+numpy==1.19.*
