--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,100 @@
-zipp==3.1.0
-pandas==1.*
-pygsheets==2.0.*
-psycopg2-binary==2.8.5
-sqlalchemy==1.3.18
-google-api-core==1.22.1
-google-api-python-client==1.7.9
-google-auth-httplib2==0.0.3
-google-auth-oauthlib==0.4.0
-google-auth==1.21.0
-google-cloud-pubsub==1.6.*
-google-cloud-storage==1.15.*
-flask-bcrypt==0.7.1
-Flask==1.1.2
-gunicorn==20.0.4
-pg8000==1.13.2
+alembic==1.6.0
+amqp==5.0.6
+attrs==20.3.0
+bcrypt==3.2.0
+billiard==3.6.4.0
+Brotli==1.0.9
+cachetools==4.2.2
+celery==5.0.4
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
+cycler==0.10.0
 dash==1.2.0
 dash-core-components==1.1.2
-dash-dangerously-set-inner-html==0.0.*
+dash-dangerously-set-inner-html==0.0.2
 dash-html-components==1.0.1
 dash-renderer==1.0.1
 dash-table==4.2.0
-flask-login==0.5.0
-Flask-SQLAlchemy==2.4.0
+Flask==1.1.2
+Flask-Admin==1.5.7
+Flask-Bcrypt==0.7.1
+Flask-Compress==1.9.0
+Flask-Login==0.5.0
 Flask-Migrate==2.5.2
+Flask-SQLAlchemy==2.4.0
 flask-talisman==0.7.0
-flask-admin==1.5.7
-celery==5.0.4
-redis==3.5.3
-flask-wtf==0.14.3
-pytest==6.2.1
-seaborn==0.11.0
+Flask-WTF==0.14.3
+future==0.18.2
+google-api-core==1.22.1
+google-api-python-client==1.7.9
+google-auth==1.21.0
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.0
+google-cloud-core==1.5.0
+google-cloud-pubsub==1.6.1
+google-cloud-storage==1.15.2
+google-resumable-media==0.4.1
+googleapis-common-protos==1.53.0
+grpc-google-iam-v1==0.12.3
+grpcio==1.37.1
+gunicorn==20.0.4
+httplib2==0.19.1
+idna==2.10
+importlib-metadata==4.0.1
+iniconfig==1.1.1
+itsdangerous==1.1.0
+Jinja2==2.11.3
+joblib==1.0.1
+kiwisolver==1.3.1
+kombu==5.0.2
+Mako==1.1.4
+MarkupSafe==1.1.1
 matplotlib==3.3.3
-sqlalchemy_utils
+numpy==1.20.2
+oauthlib==3.1.0
+packaging==20.9
+pandas==1.2.4
+pg8000==1.13.2
+Pillow==8.2.0
+plotly==4.14.3
+pluggy==0.13.1
+prompt-toolkit==3.0.18
+protobuf==3.15.8
+psycopg2-binary==2.8.5
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pygsheets==2.0.5
+pyparsing==2.4.7
+pytest==6.2.1
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2021.1
+redis==3.5.3
+requests==2.25.1
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rsa==4.7.2
 scikit-learn==0.23.2
+scipy==1.6.3
+scramp==1.1.0
+seaborn==0.11.0
+six==1.15.0
+SQLAlchemy==1.3.18
+SQLAlchemy-Utils==0.37.1
+threadpoolctl==2.1.0
+toml==0.10.2
+typing-extensions==3.10.0.0
+uritemplate==3.0.1
+urllib3==1.26.4
+vine==5.0.0
+wcwidth==0.2.5
+Werkzeug==1.0.1
+WTForms==2.3.3
+zipp==3.1.0
