--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ Flask-WTF==0.14.3
 future==0.18.2
 google-api-core==1.22.1
 google-api-python-client==1.7.9
+pyyaml
 google-auth==1.21.0
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.4.0
