Update intel-cam requirements

--- a/requirements-intel.txt
+++ b/requirements-intel.txt
@@ -1,10 +1,49 @@
+attrs==24.2.0
+cachetools==4.2.4
+certifi==2019.11.28
+chardet==3.0.4
+cycler==0.12.1
+dbus-python==1.2.16
 google-api-core==1.22.1
 google-api-python-client==1.7.9
+google-auth==1.21.0
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.4.0
-google-auth==1.21.0
-google-cloud-pubsub==1.6.*
-google-cloud-storage==1.15.*
+google-cloud-core==0.29.1
+google-cloud-pubsub==1.6.0
+google-cloud-storage==1.15.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.65.0
+grpc-google-iam-v1==0.12.3
+grpcio==1.66.1
+httplib2==0.22.0
+idna==2.8
+iniconfig==2.0.0
+kiwisolver==1.4.5
+loguru==0.6.0
 matplotlib==3.3.3
-pandas==1.*
+numpy==1.24.4
+oauthlib==3.2.2
+packaging==24.1
+pandas==1.4.4
+pillow==10.4.0
+pluggy==0.13.1
+protobuf==3.20.2
+py==1.11.0
+pyasn1==0.6.0
+pyasn1-modules==0.4.0
+PyGObject==3.36.0
+pyparsing==3.1.4
 pytest==6.2.1
+python-apt==2.0.0+ubuntu0.20.4.4
+python-dateutil==2.9.0.post0
+pytz==2024.1
+requests==2.22.0
+requests-oauthlib==2.0.0
+requests-unixsocket==0.2.0
+rsa==4.9
+six==1.14.0
+toml==0.10.2
+uritemplate==3.0.1
+urllib3==1.25.8
